CORE-8472: Fixing alignment of add to cart button on arabic for VS.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/products/_product-detail.scss
@@ -55,7 +55,8 @@
 
       @include breakpoint($desktop) {
         html[lang=ar] & {
-          margin-right: 0;
+          margin-right: 1rem;
+          font-size: 1rem;
         }
       }
 
